Fri Jul  9 11:26:30 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tools/XML/XML_Schema_Resolver.cpp:

          Remove extraneous call to initialize.

Fri Jul  9 10:24:17 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ConditionManager_T.cpp:
          Logging the wait time.

Fri Jul  9 08:52:43 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ConditionManager_T.cpp:
        * connectors/dds4ccm/impl/ReadCondition_T.cpp:
          Fuzz (mismatch traces).

        * connectors/dds4ccm/tests/QueryCondition/ReadGet/Receiver/ReadGet_Test_Receiver_exec.cpp:
          Improved logging.

Fri Jul  9 08:21:58 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * connectors/ami4ccm/tests/GetComp/Sender/GetComp_Sender_exec.cpp
        * connectors/ami4ccm/tests/GetComp/Sender/GetComp_Sender_exec.h
        Solved compile warnings.

Fri Jul  9 07:32:58 UTC 2010  Marcel Smit  <msmit@remedy.nl>


        * connectors/dds4ccm/tests/QueryCondition/EventListener/Receiver/QCLE_Test_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/QueryCondition/StateListener/Receiver/QCLS_Test_Receiver_exec.cpp:
          Removed unnecessary code

        * bin/ciao_tests.lst:
        * connectors/dds4ccm/tests/QueryCondition/TwoListeners:
        * connectors/dds4ccm/tests/QueryCondition/TwoListeners/Base:
        * connectors/dds4ccm/tests/QueryCondition/TwoListeners/Base/QCTL_Test_Base.idl:
        * connectors/dds4ccm/tests/QueryCondition/TwoListeners/Base/QCTL_Test_Base.mpc:
        * connectors/dds4ccm/tests/QueryCondition/TwoListeners/Connector:
        * connectors/dds4ccm/tests/QueryCondition/TwoListeners/Connector/QCTL_Test_Connector.idl:
        * connectors/dds4ccm/tests/QueryCondition/TwoListeners/Connector/QCTL_Test_Connector.mpc:
        * connectors/dds4ccm/tests/QueryCondition/TwoListeners/Receiver: