@@ -1,3 +1,8 @@
+Fri Jul  9 12:00:41 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * connectors/dds4ccm/impl/ConditionManager_T.cpp:
+          Only logging the wait time when logging is enabled.
+
 Fri Jul  9 11:26:30 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>
 
         * tools/XML/XML_Schema_Resolver.cpp:
